fixed watch labels